--- a/sample/sample-service-extension/pom.xml
+++ b/sample/sample-service-extension/pom.xml
@@ -36,6 +36,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
+        <version>3.7.1</version>
         <configuration>
           <reportPlugins>
             <plugin>
