--- a/sample/sample-service-extension/pom.xml
+++ b/sample/sample-service-extension/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -8,12 +9,12 @@
     <version>0.0.1-SNAPSHOT</version>
     <relativePath>../build/pom.xml</relativePath>
   </parent>
-  
+
   <artifactId>sample-service-extension</artifactId>
   <packaging>jar</packaging>
   <name>sample-service-extension</name>
   <description>Sample Extension of the Adobe Ride Automation Framework</description>
-  
+
   <properties>
     <data.model.version>0.0.1-SNAPSHOT</data.model.version>
   </properties>
