--- a/utilities/ride-config-util/pom.xml
+++ b/utilities/ride-config-util/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.adobe.ride</groupId>
     <artifactId>ride-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <relativePath>../../build/pom.xml</relativePath>
   </parent>
   
