--- a/libraries/ride-performance-lib/pom.xml
+++ b/libraries/ride-performance-lib/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.adobe.ride</groupId>
     <artifactId>ride-parent</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.4</version>
     <relativePath>../../build/pom.xml</relativePath>
   </parent>
 
