--- a/utilities/ride-model-util/pom.xml
+++ b/utilities/ride-model-util/pom.xml
@@ -35,6 +35,11 @@
       <artifactId>commons-codec</artifactId>
       <version>1.10</version>
     </dependency>
+    <dependency>
+      <groupId>com.github.everit-org.json-schema</groupId>
+	    <artifactId>org.everit.json.schema</artifactId>
+	    <version>1.12.1</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
