--- a/sample/sample-service-extension/pom.xml
+++ b/sample/sample-service-extension/pom.xml
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>com.adobe.ride</groupId>
       <artifactId>ride-core</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>com.adobe.ride.sample</groupId>
