--- a/sample/sample-service-server/pom.xml
+++ b/sample/sample-service-server/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.adobe.ride</groupId>
       <artifactId>ride-model-util</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.glassfish.jersey.bundles</groupId>
